fix(bg): fixed gradients wrap bg color

--- a/src/modules/Home/components/HiroSection/HiroSection.module.css
+++ b/src/modules/Home/components/HiroSection/HiroSection.module.css
@@ -24,7 +24,7 @@
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--color-grey-violet-800);
+    background-color: var(--color-grey-violet-900);
     isolation: isolate;
     z-index: -3;
 }
